2004-03-27  Juanma Barranquero  <lektu@terra.es>

	* gnus-srvr.el (gnus-server-prepare): Remove spurious call to `cdr'.

2004-03-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el: Use inhibit-read-only instead of buffer-read-only.
	(gnus-narrow-to-page): Don't assume point-min == 1.
	(gnus-article-edit-mode): Derive from message-mode.
	(gnus-button-alist): Add buttons to (info "(emacs)Keymaps").

	* gnus-score.el (gnus-score-find-bnews): Simplify and don't assume
	point-min == 1.

	* imap.el (imap-parse-address-list, imap-parse-body-ext):
	Disable incorrect use of `assert'.

2004-03-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-mode): Fix last change.

2004-03-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-mode): Set comment-start-skip.

2004-02-08  Andreas Schwab  <schwab@suse.de>

	* nnlistserv.el (nnlistserv-kk-wash-article): Fix paren nesting.

	* gnus-score.el (gnus-summary-increase-score): Fix format string.

2003-06-25  Sam Steingold  <sds@gnu.org>

	* gnus-group.el (gnus-group-suspend): Avoid some consing.

2003-06-11  Sam Steingold  <sds@gnu.org>

	* pop3.el (pop3-leave-mail-on-server): New user variable.
	(pop3-movemail): Delete mail only when it is nil.

2003-05-10  Juanma Barranquero  <lektu@terra.es>

	* message.el (message-buffer-naming-style): Fix typo.

2003-05-07  Dave Love  <fx@gnu.org>

	[Partial sync with Gnus.]

	* rfc2047.el (rfc2047-header-encoding-alist): Add Followup-To.
	(rfc2047-encode-message-header): Fold when encoding not necessary.
	(rfc2047-encode-region): Skip \n as whitespace.
	(rfc2047-fold-region): Fix whitespace regexps.  Don't break just
	after the header name.
	(rfc2047-unfold-region): Fix regexp and whitespace-skipping.

2003-05-06  Jesper Harder  <harder@ifa.au.dk>

	* gnus-cus.el (gnus-group-customize, gnus-score-parameters):
	Don't quote nil and t in docstrings.

	* gnus-score.el (gnus-score-lower-thread): Likewise.
